--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding = true
+        viewBinding true
     }
 }
 
@@ -63,6 +63,15 @@ dependencies {
     //图片加载
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    //加载状态反馈
+    implementation 'com.kingja.loadsir:loadsir:1.3.8'
+
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //对话框
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
 
     //刷新框架
 //    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
